<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.jobjects</groupId>
	<artifactId>myws2</artifactId>
	<name>API REST J2EE Example</name>
	<version>1.9.0-SNAPSHOT</version>
	<packaging>war</packaging>

	<properties>
		<version.thorntail>2.6.0.Final</version.thorntail>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<failOnMissingWebXml>false</failOnMissingWebXml>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.thorntail</groupId>
				<artifactId>bom</artifactId>
				<version>${version.thorntail}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<finalName>demo</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.thorntail</groupId>
				<artifactId>thorntail-maven-plugin</artifactId>
				<version>${version.thorntail}</version>
				<executions>
					<execution>
						<goals>
							<goal>package</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<properties>
						<!-- Ne redirige pas <swarm.swagger.web-app.context>http://localhost:8880/api/swagger.json</swarm.swagger.web-app.context> -->
					</properties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0-M3</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.5.2</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- For surefire and failsafe plugins we add an additional argument illegal-access=permit 
				to allow all reflection access for third party libraries: -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.9</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
			<scope>compile</scope>
		</dependency>
		<!-- Java EE 7 dependency -->
		<!-- <dependency> <groupId>javax</groupId> <artifactId>javaee-api</artifactId> 
			<version>8.0</version> <scope>provided</scope> </dependency> -->
		<!-- Brought in via WildFly Swarm `bom` -->
		<dependency>
			<groupId>io.thorntail</groupId>
			<artifactId>arquillian</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.thorntail</groupId>
			<artifactId>microprofile-health</artifactId>
		</dependency>
		<!-- Thorntail Fractions -->
		<dependency>
			<groupId>io.thorntail</groupId>
			<artifactId>datasources</artifactId>
		</dependency>
		<dependency>
			<groupId>io.thorntail</groupId>
			<artifactId>jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>io.thorntail</groupId>
			<artifactId>logging</artifactId>
		</dependency>
		<dependency>
			<groupId>io.thorntail</groupId>
			<artifactId>jaxrs-jsonp</artifactId>
		</dependency>
		<dependency>
			<groupId>io.thorntail</groupId>
			<artifactId>ejb</artifactId>
		</dependency>
		<dependency>
			<groupId>io.thorntail</groupId>
			<artifactId>cdi</artifactId>
		</dependency>
		<dependency>
			<groupId>io.thorntail</groupId>
			<artifactId>bean-validation</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client -->
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-client</artifactId>
			<version>4.4.2.Final</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.jboss.resteasy</groupId>
		    <artifactId>resteasy-jackson2-provider</artifactId>
		    <version>4.4.2.Final</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>6.1.0.Final</version>
			<scope>test</scope>
		</dependency>
		<!-- -->
		<!-- java.lang.NoClassDefFoundError: javax/xml/bind/annotation/XmlElement -->
		<dependency>
			<groupId>io.thorntail</groupId>
			<artifactId>jaxrs-jaxb</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<!-- <distributionManagement> <repository> <id>nexus</id> <name>Releases</name> 
		<url>http://192.168.56.128:8081/repository/maven-releases/</url> </repository> 
		<snapshotRepository> <id>nexus</id> <name>Snapshot</name> <url>http://192.168.56.128:8081/repository/maven-snapshots/</url> 
		</snapshotRepository> </distributionManagement> -->
</project>
